configures mocha and adds a basic unit test for AddressBook class

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "superstatic src --port 3000",
     "cy:open":"cypress open",
-    "cypress":"start-server-and-test start http://localhost:3000 cy:open"
+    "cypress":"start-server-and-test start http://localhost:3000 cy:open",
+    "test": "mocha --file specs/specHelper.js -u bdd-lazy-var/global --recursive --exit specs/units"
   }
 }
